# DangerousObjectDetector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Train/: B0007.vec  B0049.vec  B0051.vec  B0052.vec  B0076.vec  cascade.sh  change_ext.sh  class.py  train_haar
Train/B0007/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
Train/B0049/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml
Train/B0051/: stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
Train/B0052/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
Train/B0076/: stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
Train/all/: samples.vec
Train/data/: params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Views/ClickableLabel/: ClickableLabel.cpp  ClickableLabel.h
Views/GUI/: GUI.cpp  GUI.h
Views/TableWidget/: TableWidget.cpp  TableWidget.h
